<resources>
    <string name="app_name">Capybara Fit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="log_in">Log In</string>
    <string name="logo_fit_strike">Logo Capybara Fit</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="error">error</string>
    <string name="wait">Please wait</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_code">Verification code</string>
    <string name="send_code">Send Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="friends">Friends</string>
    <string name="exit">Exit</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="you_don_t_have_friends">You don\'t have friends</string>
    <string name="add_new_friend">Add new Friend</string>
    <string name="add">add</string>
</resources>