<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".presentation.ui.SignUpActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/logo_fit_strike"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llForm"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@id/imageView6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/edtTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:textColorHint="@color/white"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/edtTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edtTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/edtTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:hint="@string/confirm_password" />

        <TextView
            android:id="@+id/txvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/white"
            android:textColor="@color/primary"
            android:enabled="false"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:textAlignment="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/already_have_an_account"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txvLogIn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>